--- a/docker/Caddyfile
+++ b/docker/Caddyfile
@@ -1,5 +1,5 @@
 0.0.0.0:8000
 tls off
 
-root /kafka-connect-ui
-log /access.log
+root /kafka-connect-ui/dist
+log /kafka-connect-ui/logs/access.log
