--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "bower install",
-    "build": "grunt && cd dist && tar cvzf kafka-connect-ui.tar.gz ."
+    "build": "grunt && cd dist"
   },
   "repository": {
     "type": "git",
