--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     image: parrotstream/kafka-connect-ui:0.9.2
     networks:
-    - hadoop
+    - parrot
     ports:
     - 8000:8000
     environment:
@@ -14,6 +14,6 @@ services:
 networks:
   default:
     external:
-      name: hadoop
-  hadoop:
+      name: parrot
+  parrot:
     driver: bridge
