Updated to version 0.9.6

--- a/docker.parrot/docker-compose.yml
+++ b/docker.parrot/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       CONNECT_URL: http://kafka:8083
       PROXY: "true"
-      PORT: 8000
+      PORT: "8000"
 networks:
   default:
     external:
