--- a/docker.parrot/docker-compose.yml
+++ b/docker.parrot/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
-    image: parrotstream/kafka-connect-ui:0.9.6
+    image: parrotstream/kafka-connect-ui:latest
     external_links:
     - kafka
     ports:
